# ffetch

./: README.md  pyproject.toml
ffetch/: fred.py
text/: fred_categories.txt  fred_categories_and_series.txt
