[tool.poetry]
name = "ffetch"
version = "0.1.0"
description = "A tool for fetching/parsing financial, economic and geographical data from various sources."
authors = ["Mayaz Rakib <mayaz@rakib.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
